ci: fix ci (#2)
* ci: fix ci

* ci: fix checkstyle violations

* ci: fix checkstyle violations